--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ h1 {
 
 main {
 	background-color: rgb(235, 235, 235);
-	height: 250px;
+	height: 300px;
 	max-width: 800px;
 	border-radius: 5px;
 	padding: 20px;
@@ -42,16 +42,27 @@ main {
 
 .die-display {
 	margin: 0;
-	height: 50px;
-	width: 50px;
+	padding-bottom: 8px;
+	height: 75px;
+	width: 75px;
 	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
 	border-radius: 10px;
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
+	justify-content: space-evenly;
 	align-items: center;
 	cursor: pointer;
-	font-size: 2rem;
 	background-color: whitesmoke;
+	font-size: 5rem;
+}
+
+.utilities {
+	color: whitesmoke;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 1rem;
+	width: 495px;
 }
 
 .roll-dice {
@@ -64,7 +75,6 @@ main {
 	font-size: 1.2rem;
 	font-family: 'Karla', sans-serif;
 	cursor: pointer;
-	margin-top: 1rem;
 }
 
 .roll-dice:focus {
@@ -73,4 +83,9 @@ main {
 
 .roll-dice:active {
 	box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
+
+h3 {
+	margin: 0;
+	font-size: 1.5rem;
 }
