--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 body {
 	margin: 0;
-	background-color: #0b2434;
+	background-color: #505050;
 }
 
 h1 {
@@ -70,7 +70,7 @@ main {
 	width: 125px;
 	border: none;
 	border-radius: 6px;
-	background-color: #5035ff;
+	background-color: #008862;
 	color: white;
 	font-size: 1.2rem;
 	font-family: 'Karla', sans-serif;
@@ -87,11 +87,5 @@ main {
 
 h3 {
 	margin: 0;
-	font-size: 1.25rem;
-}
-
-h4 {
-	margin: 0;
-	padding: 0 8px 0 8px;
 	font-size: 1.25rem;
 }
