--- a/src/index.css
+++ b/src/index.css
@@ -59,10 +59,11 @@ main {
 .utilities {
 	color: whitesmoke;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	align-items: center;
-	margin: 1rem;
+	margin-top: 2rem;
 	width: 495px;
+	height: 125px;
 }
 
 .roll-dice {
@@ -88,4 +89,24 @@ main {
 h3 {
 	margin: 0;
 	font-size: 1rem;
+}
+
+.timer-container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+p {
+	font-size: 1rem;
+	color: white;
+}
+
+hr {
+	background-color: white;
+	border-width: 0;
+	border-radius: 8px;
+	height: 4px;
+	width: 100px;
+	margin: 0;
 }
