--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,11 @@ h1 {
 }
 
 main {
-	background-color: rgb(235, 235, 235);
-	height: 300px;
-	max-width: 800px;
-	border-radius: 5px;
-	padding: 20px;
+	background-color: rgb(255, 255, 255);
+	min-height: 250px;
+	min-width: 520px;
+	border-radius: 6px;
+	padding: 16px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -42,9 +42,8 @@ main {
 
 .die-display {
 	margin: 0;
-	padding-bottom: 8px;
-	height: 75px;
-	width: 75px;
+	height: 80px;
+	width: 80px;
 	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
 	border-radius: 10px;
 	display: flex;
@@ -53,42 +52,45 @@ main {
 	align-items: center;
 	cursor: pointer;
 	background-color: whitesmoke;
+}
+
+h2 {
 	font-size: 4rem;
 }
 
 .utilities {
-	color: whitesmoke;
+	color: white;
+	background-color: white;
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	margin-top: 2rem;
-	width: 495px;
-	height: 125px;
+	margin-top: 1rem;
+	min-width: 520px;
+	height: 100px;
+	border-radius: 6px;
 }
 
 .roll-dice {
 	height: 50px;
 	width: 125px;
-	border: none;
+	border: solid 2px black;
 	border-radius: 6px;
-	background-color: #008862;
-	color: white;
-	font-size: 1.2rem;
+	background-color: rgb(225, 225, 225);
+	color: black;
+	font-size: 1.25rem;
 	font-family: 'Karla', sans-serif;
 	cursor: pointer;
+	padding: 0;
 }
 
-.roll-dice:focus {
-	outline: none;
-}
-
-.roll-dice:active {
-	box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+.roll-dice:hover {
+	background-color: rgb(200, 155, 255);
 }
 
 h3 {
 	margin: 0;
-	font-size: 1rem;
+	font-size: 1.25rem;
+	color: black;
 }
 
 .timer-container {
@@ -99,14 +101,16 @@ h3 {
 
 p {
 	font-size: 1rem;
-	color: white;
+	font-weight: 800;
+	color: black;
+	margin: 0.5rem;
 }
 
 hr {
-	background-color: white;
+	background-color: black;
 	border-width: 0;
 	border-radius: 8px;
-	height: 4px;
-	width: 100px;
+	height: 2px;
+	width: 140px;
 	margin: 0;
 }
